Suite green: 148 files / 1170 tests / 0 failures
The last twelve were pinned expectations, not behaviour. Each is updated with the
reason it moved, because "update the pin until it passes" is how a guard becomes
decoration.

THE PREVIEW DIVERGENCE LIST: 2 entries -> 9. The image ships one artefact and preview
has not been migrated, so every validator FluidTokens changed between the artefact
preview was deployed from (4c4d143) and the one shipped now diverges from the captured
preview datums. Every entry is explained by a source change or a cascade from one:
[2] pool policy and [8] pool spend (pool.ak), [14] loan recast
(loan_recast_action.ak), [24] pool sell-lender-position (the original known one),
[26]/[27] pool-manager spend and policy (cascade), [28] locked-borrower-manager
(locked_borrower_manager.ak), LM[3] and LM[6] (cascade from pool-manager).
⚠ Indices 26-28 are the 29-FIELD shape -- these captured datums predate the
poolEditActionScriptHash insertion, so nothing is shifted.

A second, smaller list pins the partial-derivation case: with no smartTokens the
pool-manager branch is null and SKIPPED, leaving exactly [2], [8], [14], [24], [28].

TWO TESTS NEEDED MORE THAN A NEW VALUE:

⚠ aSingleCorruptedCredentialIsCaught asserted the corruption was mismatches.getFirst().
Mismatches come out in index order and the corruption is at ConfigDatum[10]; with [2]
and [8] now preceding it, that assertion would have passed or failed on ORDERING
rather than on the corruption being caught. Rewritten to pull the entry out by name
and check the remainder equals the accepted set.

⚠ currentMainnetDatumMutationAddsOneSpecificMismatch mutated a credential that no
longer appears in the mainnet datum at all, so the mutation silently did not apply --
the test would have asserted against an unmutated fixture. Re-pointed at ConfigDatum[2],
which the current datum does carry.

CHAIN-VERIFIED WHERE IT COULD BE:
- blueprint sha256 -> ef1064fd..., the artefact upstream committed and we v