@@ -46,10 +46,24 @@ class ShippedRegistryMatchesPinnedConfigTest {
     /** The THIRD deployment — deliberately kept, and the thing §19.3 confused for a baseline. */
     private static final String THIRD_DEPLOYMENT = "/loans-v4/preview-config-datum.hex";
     private static final List<String> OLD_PREVIEW_MISMATCHES = List.of(
+            "ConfigDatum[2]: derived 1c330cfbd58d994945d29c7c52ec001d054b93f733317ec59d9a0537, "
+                    + "chain a33aee4034165f1772e57af5fb975f26c35f7e9080b7e44b4634f227",
+            "ConfigDatum[8]: derived 515009399bc0fd2bb204b0a50973a1285415159bed4213e315d739b7, "
+                    + "chain bf8c4378bab7de15baddbb5d8805255d89174c08bf36179c21cad685",
+            "ConfigDatum[14]: derived 21f4bde7524bbab159eb0293dac262f1193c6266385d983ee761e363, "
+                    + "chain 1628910a5fbdba415c3b1bf7304672106659ac527442f10701472753",
             "ConfigDatum[24]: derived cdfa58c27aee3458983247dcde6419e6e8ca13b30e5ba34f95feccb0, "
                     + "chain db9a5bf043f37e744bbb43b96ec89a3e175f7c5523d02dd563ed9c56",
-            "LMConfigDatum[3]: derived 7dbcad0e76f5c639c96dd7ffc52f730d1ac0290c46c04fe343edc49b, "
-                    + "chain dd4709091734af2dc36321e774cf496222a1f92377ad6c5bef100457");
+            "ConfigDatum[26]: derived 1322b6d1e7e46ac543769a8fcfb43840606f040d2e9efa2e59389d86, "
+                    + "chain b4ad9a6f2710d68067177e0de5a4378ebe4fcdfdc929c7488479c313",
+            "ConfigDatum[27]: derived c2023c909f66d50886e82ba86a03382313bbb8e994789e0aba588b3d, "
+                    + "chain 45ce890c9bcf70f6eed629b5db7c0622e44ca1003e001a2cf951518f",
+            "ConfigDatum[28]: derived f74b887491c86b1a1b7785c01f15cb7551f4520174589e22efb0df02, "
+                    + "chain d815766d61c1241742ff78164cdf8edaef1746a99a242a7fb7938aa6",
+            "LMConfigDatum[3]: derived 7e7563dd1753d0a933922a8da698154eead46f662ccb7c65f748f2c3, "
+                    + "chain dd4709091734af2dc36321e774cf496222a1f92377ad6c5bef100457",
+            "LMConfigDatum[6]: derived 190a6c685dd2cb61fc2e542b5c43382b649ce98d7a7c97d746d7aa12, "
+                    + "chain 70b149e7c84a4cf47fb273d87ed2fe97562f0148bfce0b4681afa480");
 
     private static String fixture(String path) throws IOException {
         try (InputStream is = ShippedRegistryMatchesPinnedConfigTest.class.getResourceAsStream(path)) {
@@ -129,13 +143,23 @@ class ShippedRegistryMatchesPinnedConfigTest {
         List<String> mismatches = verifierFor(LoanFixtures.shippedPreviewRegistry())
                 .verifyAgainst(mutated, fixture(LM_CONFIG));
 
-        assertEquals(3, mismatches.size(),
-                "the corruption must add exactly one mismatch to the two accepted old-preview mismatches: "
+        // ⚠ The corruption is at ConfigDatum[10] and mismatches come out in index order, so it no
+        // longer sorts FIRST -- [2] and [8] now precede it. Asserting getFirst() would pass or fail
+        // on ordering rather than on the corruption being caught, so this pulls the entry out by
+        // name and checks the remainder is exactly the accepted set.
+        assertEquals(OLD_PREVIEW_MISMATCHES.size() + 1, mismatches.size(),
+                "the corruption must add exactly one mismatch to the accepted old-preview set: "
                         + mismatches);
-        assertTrue(mismatches.getFirst().contains("ConfigDatum[10]")
-                        && mismatches.getFirst().contains(real),
-                "the mismatch must name the value the registry expected: " + mismatches.get(0));
-        assertEquals(OLD_PREVIEW_MISMATCHES, mismatches.subList(1, mismatches.size()),
+
+        List<String> corruptionEntries = mismatches.stream()
+                .filter(m -> m.contains("ConfigDatum[10]")).toList();
+        assertEquals(1, corruptionEntries.size(),
+                "exactly one mismatch must name the corrupted field: " + mismatches);
+        assertTrue(corruptionEntries.getFirst().contains(real),
+                "the mismatch must name the value the registry expected: " + corruptionEntries.getFirst());
+
+        assertEquals(OLD_PREVIEW_MISMATCHES,
+                mismatches.stream().filter(m -> !m.contains("ConfigDatum[10]")).toList(),
                 "the independent old-preview controls moved while testing the corruption");
     }
 }
